# deepl-simple-api

./: Cargo.toml  README.md  check.sh
src/: api_key.rs  async_impl.rs  blocking.rs  error.rs  lib.rs  options.rs  parameter.rs  translate.rs  translate_parameter.rs  usage.rs
